AzureResourceManager/BPS/BPS_on_Azure_1-vBlade_1-Vnet_1-Subnet_Use_Case_ARM_Template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
		"IxiaImagesResourceGroupName": {
			"defaultValue": "Ixia_Images_RG",
			"type": "String"
		},
        "MgmtSecurityRuleSourceIpPrefix": {
			"defaultValue": "42.42.42.42/32",
			"type": "String"
		},
        "BpsSystemControllerImageName": {
			"defaultValue": "Ixia_BreakingPoint_Virtual_Controller_9.00.108",
			"type": "String"
		},
        "BpsSystemControllerVmSize": {
			"defaultValue": "Standard_F4s",
			"type": "String",
			"allowedValues": [
				"Standard_F4s",
				"Standard_F4s_v2"
			]
		},
        "BpsVirtualBladeImageName": {
			"defaultValue": "Ixia_BreakingPoint_Virtual_Blade_9.00.108",
			"type": "String"
		},
		"BpsVirtualBladeVmSize": {
			"defaultValue": "Standard_F16s",
			"type": "String",
			"allowedValues": [
				"Standard_F16s",
				"Standard_F8s",
				"Standard_F4s"
			]
		},
        "DiagnosticsStorageAccountName": {
			"defaultValue": "ixiadiagnostics",
			"type": "String"
		},
        "OptionalVMPrefix": {
			"defaultValue": "Ixia",
			"type": "String"
		},
		"UserEmailTag": {
			"defaultValue": "Optional-Email-Tag",
			"type": "String"
		},
		"UserProjectTag": {
			"defaultValue": "Optional-Project-Tag",
			"type": "String"
		},
		"UserOptionsTag": {
			"defaultValue": "Optional-Options-Tag",
			"type": "String"
		}
	},
    "variables": {
        "apiVersion": "2018-06-01",
		"SubscriptionId" : "[subscription().subscriptionId]",
		"OptionalVMPrefix": "[parameters('OptionalVMPrefix')]",
		"UserEmailTag": "[parameters('UserEmailTag')]",
		"UserProjectTag": "[parameters('UserProjectTag')]",
		"UserOptionsTag": "[parameters('UserOptionsTag')]",
		"IxiaImagesResourceGroupName": "[parameters('IxiaImagesResourceGroupName')]",
		"DiagnosticsStorageAccountName": "[parameters('DiagnosticsStorageAccountName')]",
        "VnetName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VNET')]",
        "VnetAddressPrefix": "10.0.0.0/16",
		"MgmtSubnetName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VNET_MGMT_SUBNET')]",
        "MgmtSubnetPrefix": "10.0.10.0/24",
        "CtrlSubnetName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VNET_CTRL_SUBNET')]",
        "CtrlSubnetPrefix": "10.0.1.0/24",
        "Test1SubnetName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VNET_TEST1_SUBNET')]",
        "Test1SubnetPrefix": "10.0.2.0/24",
        "MgmtNetworkSecurityGroupName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_NETWORK_SECURITY_GROUP')]",
        "Test1NetworkSecurityGroupName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_TEST1_NETWORK_SECURITY_GROUP')]",  	
        "MgmtSshSecurityRuleName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_SSH_RULE')]",
        "MgmtHttpSecurityRuleName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_WEB_RULE')]",
        "MgmtHttpsSecurityRuleName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_HTTPS_RULE')]",
        "MgmtSecurityRuleSourceIpPrefix": "[parameters('MgmtSecurityRuleSourceIpPrefix')]",
        "BpsSystemControllerEth0Name": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_SYSTEM_CONTROLLER_ETH0')]",
        "BpsSystemControllerEth1Name": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_SYSTEM_CONTROLLER_ETH1')]",
        "BpsVirtualBlade1Eth0Name": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VIRTUAL_BLADE1_ETH0')]",
        "BpsVirtualBlade1Eth1Name": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VIRTUAL_BLADE1_ETH1')]",
        "BpsVirtualBlade1Eth2Name": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_VIRTUAL_BLADE1_ETH2')]",
		"BpsSystemControllerEth1IpAddress": "10.0.1.10",
		"BpsVirtualBlade1Eth0IpAddress": "10.0.1.11",
		"BpsVirtualBlade1Eth1IpAddresses": ["10.0.2.12", "10.0.2.13", "10.0.2.14", "10.0.2.15", "10.0.2.16", "10.0.2.17", "10.0.2.18", "10.0.2.19", "10.0.2.20", "10.0.2.21", "10.0.2.22", "10.0.2.23", "10.0.2.24", "10.0.2.25", "10.0.2.26"],
		"BpsVirtualBlade1Eth2IpAddresses": ["10.0.2.32", "10.0.2.33", "10.0.2.34", "10.0.2.35", "10.0.2.36", "10.0.2.37", "10.0.2.38", "10.0.2.39", "10.0.2.40", "10.0.2.41", "10.0.2.42", "10.0.2.43", "10.0.2.44", "10.0.2.45", "10.0.2.46"],
        "BpsSystemControllerName": "[concat(variables('OptionalVMPrefix'), '-', 'BPS-AZURE-SYSTEM-CONTROLLER')]",
		"BpsSystemControllerDnsLabel": "[concat(toLower(replace(resourceGroup().name, '_', '-')), '-', 'bps-sys-ctrl', '-', substring(uniqueString(resourceGroup().id),0,6))]",
        "BpsSystemControllerEnableAcceleratedNetworking": false,
        "BpsSystemControllerEnableIPForwarding": false,
		"BpsSystemControllerDisablePasswordAuthentication": false,
		"BpsSystemControllerProvisionVMAgent": false,
		"BpsSystemControllerBootDiagnosticsEnabled": true,
        "BpsSystemControllerVmSize": "[parameters('BpsSystemControllerVmSize')]",
		"BpsSystemControllerDiskSizeGB": "20",
        "BpsVirtualBlade1Name": "[concat(variables('OptionalVMPrefix'), '-', 'BPS-AZURE-VIRTUAL-BLADE1')]",
		"BpsVirtualBlade1DnsLabel": "[concat(toLower(replace(resourceGroup().name, '_', '-')), '-', 'bps-vblade-1', '-', substring(uniqueString(resourceGroup().id),0,6))]",
        "BpsVirtualBladeEnableAcceleratedNetworking": true,
        "BpsVirtualBladeEnableIPForwarding": true,
		"BpsVirtualBladeDisablePasswordAuthentication": false,
		"BpsVirtualBladeProvisionVMAgent": false,
		"BpsVirtualBladeBootDiagnosticsEnabled": true,
        "BpsVirtualBladeVmSize": "[parameters('BpsVirtualBladeVmSize')]",
		"BpsVirtualBladeDiskSizeGB": "14",
        "MgmtPublicIpAddressName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_MGMT_PUBLIC_IP')]",
        "BpsVirtualBlade1Eth0PublicIpAddressName": "[concat(variables('OptionalVMPrefix'), '_', 'BPS_AZURE_BPS_VIRTUAL_BLADE1_ETH0_PUBLIC_IP')]",
        "BpsSystemControllerImageName": "[parameters('BpsSystemControllerImageName')]",
		"BpsSystemControllerCreateOption": "FromImage",
		"BpsSystemControllerImageId": "[concat('/subscriptions/', variables('SubscriptionId'), '/resourceGroups/', variables('IxiaImagesResourceGroupName'), '/providers/Microsoft.Compute/images/', variables('BpsSystemControllerImageName'))]",
        "BpsVirtualBladeImageName": "[parameters('BpsVirtualBladeImageName')]",
		"BpsVirtualBladeImageId": "[concat('/subscriptions/', variables('SubscriptionId'), '/resourceGroups/', variables('IxiaImagesResourceGroupName'), '/providers/Microsoft.Compute/images/', variables('BpsVirtualBladeImageName'))]",		
		"BpsVirtualBladeCreateOption": "FromImage",		
		"AdminUserName": "bpcloud",
		"AdminPassword": "Ixia1234!",
		"SshPublicKeyData": "ssh-rsa",
		"SshKeyPath": "[concat('/home/',variables('AdminUserName'),'/.ssh/authorized_keys')]"
	},
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('VnetName')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('VnetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('MgmtSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('MgmtSubnetPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('CtrlSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('CtrlSubnetPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('Test1SubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('Test1SubnetPrefix')]"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },    

        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(variables('VnetName'), '/', variables('MgmtSubnetName'))]",
            "apiVersion": "[variables('apiVersion')]",
            "scale": null,
            "properties": {
                "addressPrefix": "[variables('MgmtSubnetPrefix')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]"
            ]
        },
        
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(variables('VnetName'), '/', variables('CtrlSubnetName'))]",
            "apiVersion": "[variables('apiVersion')]",
            "scale": null,
            "properties": {
                "addressPrefix": "[variables('CtrlSubnetPrefix')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]"
            ]
        },
        
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(variables('VnetName'), '/', variables('Test1SubnetName'))]",
            "apiVersion": "[variables('apiVersion')]",
            "scale": null,
            "properties": {
                "addressPrefix": "[variables('Test1SubnetPrefix')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]"
            ]
        },

        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('MgmtNetworkSecurityGroupName')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "securityRules": [
                    {
                        "name": "[variables('MgmtHttpsSecurityRuleName')]",
                        "properties": {
                            "description": "Allow HTTPS",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[variables('MgmtSecurityRuleSourceIpPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "[variables('MgmtSshSecurityRuleName')]",
                        "properties": {
                            "description": "Allow SSH",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[variables('MgmtSecurityRuleSourceIpPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "[variables('MgmtHttpSecurityRuleName')]",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "[variables('MgmtSecurityRuleSourceIpPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        }, 

        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('Test1NetworkSecurityGroupName')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
				"Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "securityRules": [
                    {
                        "name": "[variables('MgmtHttpSecurityRuleName')]",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "[variables('MgmtSecurityRuleSourceIpPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        }, 
        
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('BpsSystemControllerEth0Name')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('MgmtPublicIpAddressName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('MgmtSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": "[variables('BpsSystemControllerEnableAcceleratedNetworking')]",
                "enableIPForwarding": "[variables('BpsSystemControllerEnableIPForwarding')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MgmtNetworkSecurityGroupName'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', variables('BpsSystemControllerName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('MgmtSubnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MgmtNetworkSecurityGroupName'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('MgmtPublicIpAddressName'))]"
            ]
        },

        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('BpsSystemControllerEth1Name')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('BpsSystemControllerEth1IpAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('CtrlSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": "[variables('BpsSystemControllerEnableAcceleratedNetworking')]",
                "enableIPForwarding": "[variables('BpsSystemControllerEnableIPForwarding')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MgmtNetworkSecurityGroupName'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', variables('BpsSystemControllerName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('CtrlSubnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MgmtNetworkSecurityGroupName'))]"
            ]
        },
                   
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('BpsVirtualBlade1Eth0Name')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth0IpAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('BpsVirtualBlade1Eth0PublicIpAddressName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('CtrlSubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": "[variables('BpsVirtualBladeEnableAcceleratedNetworking')]",
                "enableIPForwarding": "[variables('BpsVirtualBladeEnableIPForwarding')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MgmtNetworkSecurityGroupName'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('CtrlSubnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('MgmtNetworkSecurityGroupName'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('BpsVirtualBlade1Eth0PublicIpAddressName'))]"
            ]
        },      
 
       {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('BpsVirtualBlade1Eth1Name')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[0]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig2",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[1]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig3",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[2]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig4",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[3]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig5",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[4]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig6",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[5]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig7",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[6]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig8",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[7]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig9",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[8]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigA",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[9]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigB",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[10]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigC",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[11]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigD",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[12]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigE",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[13]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigF",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth1IpAddresses')[14]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": "[variables('BpsVirtualBladeEnableAcceleratedNetworking')]",
                "enableIPForwarding": "[variables('BpsVirtualBladeEnableIPForwarding')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Test1NetworkSecurityGroupName'))]"
                },
                "primary": false
            },
            "dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]",
				"[resourceId('Microsoft.Network/networkSecurityGroups', variables('Test1NetworkSecurityGroupName'))]"
            ]
        },
 
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('BpsVirtualBlade1Eth2Name')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[0]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig2",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[1]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig3",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[2]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig4",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[3]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig5",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[4]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig6",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[5]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig7",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[6]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig8",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[7]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfig9",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[8]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigA",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[9]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigB",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[10]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigC",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[11]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigD",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[12]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigE",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[13]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    },
                    {
                        "name": "ipconfigF",
                        "properties": {
                            "privateIPAddress": "[variables('BpsVirtualBlade1Eth2IpAddresses')[14]]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]"
                            },
                            "primary": false,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                 ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": "[variables('BpsVirtualBladeEnableAcceleratedNetworking')]",
                "enableIPForwarding": "[variables('BpsVirtualBladeEnableIPForwarding')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Test1NetworkSecurityGroupName'))]"
                },
                "primary": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('Test1SubnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Test1NetworkSecurityGroupName'))]"
            ]
        },

        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('MgmtPublicIpAddressName')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('BpsSystemControllerDnsLabel')]",
                    "fqdn": "[concat(variables('BpsSystemControllerDnsLabel'),'.', resourceGroup().location,'.cloudapp.azure.com')]"
                }
            },
            "dependsOn": []
        },

        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('BpsVirtualBlade1Eth0PublicIpAddressName')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('BpsVirtualBlade1DnsLabel')]",
                    "fqdn": "[concat(variables('BpsVirtualBlade1DnsLabel'),'.', resourceGroup().location,'.cloudapp.azure.com')]"
                }
            },
            "dependsOn": []
        },

        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('BpsSystemControllerName')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
			    "Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('BpsSystemControllerVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[variables('BpsSystemControllerImageId')]"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat('disk_', variables('BpsSystemControllerName'))]",
                        "createOption": "[variables('BpsSystemControllerCreateOption')]",
                        "caching": "ReadWrite",
                        "diskSizeGB": "[variables('BpsSystemControllerDiskSizeGB')]"
                    },
                    "dataDisks": []
                },
				"osProfile": {
					"computerName": "[variables('BpsSystemControllerName')]",
					"adminUsername": "[variables('AdminUserName')]",
					"adminPassword": "[variables('AdminPassword')]",
					"linuxConfiguration": {
						"disablePasswordAuthentication": "[variables('BpsSystemControllerDisablePasswordAuthentication')]",
						"provisionVMAgent": "[variables('BpsSystemControllerProvisionVMAgent')]",
						"ssh": {
						  "publicKeys": [
							{
							  "path": "[variables('SshKeyPath')]",
							  "keyData": "[variables('SshPublicKeyData')]"
							}
						  ]
						}
					}
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsSystemControllerEth0Name'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsSystemControllerEth1Name'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "[variables('BpsSystemControllerBootDiagnosticsEnabled')]",
                        "storageUri": "[concat('https', '://', variables('DiagnosticsStorageAccountName'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsSystemControllerEth0Name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsSystemControllerEth1Name'))]"                
            ]
        },

        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('BpsVirtualBlade1Name')]",
            "apiVersion": "[variables('apiVersion')]",
            "location": "[resourceGroup().location]",
            "scale": null,
			"tags": {
				"Owner": "[variables('UserEmailTag')]",
				"Project": "[variables('UserProjectTag')]",
			    "Options": "[variables('UserOptionsTag')]",
				"ResourceGroup": "[resourceGroup().name]",
				"Location": "[resourceGroup().location]"
			},
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('BpsVirtualBladeVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[variables('BpsVirtualBladeImageId')]"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat('disk_', variables('BpsVirtualBlade1Name'))]",
                        "createOption": "[variables('BpsVirtualBladeCreateOption')]",
                        "caching": "ReadWrite",
                        "diskSizeGB": "[variables('BpsVirtualBladeDiskSizeGB')]"
                    },
                    "dataDisks": []
                },
				"osProfile": {
					"computerName": "[variables('BpsVirtualBlade1Name')]",
					"adminUsername": "[variables('AdminUserName')]",
					"adminPassword": "[variables('AdminPassword')]",
					"linuxConfiguration": {
						"disablePasswordAuthentication": "[variables('BpsVirtualBladeDisablePasswordAuthentication')]",
						"provisionVMAgent": "[variables('BpsVirtualBladeProvisionVMAgent')]",
						"ssh": {
						  "publicKeys": [
							{
							  "path": "[variables('SshKeyPath')]",
							  "keyData": "[variables('SshPublicKeyData')]"
							}
						  ]
						}
					}
				},
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsVirtualBlade1Eth0Name'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsVirtualBlade1Eth1Name'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsVirtualBlade1Eth2Name'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "[variables('BpsVirtualBladeBootDiagnosticsEnabled')]",
                        "storageUri": "[concat('https', '://', variables('DiagnosticsStorageAccountName'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsVirtualBlade1Eth0Name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsVirtualBlade1Eth1Name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('BpsVirtualBlade1Eth2Name'))]"
            ]
        }
    ]
}
